<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ContenidoNotasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tabla_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textotercero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/nombre_notas"
                    android:textSize="@dimen/notas_font_size" />

                <TextView
                    android:id="@+id/notas_nombre_alumno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:textSize="@dimen/notas_font_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/dni_notas"
                    android:textSize="@dimen/notas_font_size" />

                <TextView
                    android:id="@+id/notas_dni_alumno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:textSize="@dimen/notas_font_size" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/mencion_notas"
                    android:textSize="@dimen/notas_font_size" />

                <TextView
                    android:id="@+id/notas_mencion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:textSize="@dimen/notas_font_size" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp"
                    android:text="@string/curso_notas"
                    android:textSize="@dimen/notas_font_size" />

                <TextView
                    android:id="@+id/notas_curso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10sp"
                    android:textSize="@dimen/notas_font_size" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tabla_notas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp">

            <TableRow
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary_blue_dark">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/asignatura"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="@dimen/notas_font_size" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/nota"
                    android:textColor="@color/design_default_color_on_primary"
                    android:textSize="@dimen/notas_font_size" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>